# nikruvx

./: .commit-msg.txt  .env.example  .gitignore  CHANGE_LOG.md  Makefile  README.md  SECURITY.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tasks.ps1  test-wiz.csv
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
api/: server.py
config/: settings.py
data/: historical_incidents.json
data/popular_packages/: cratesio.json  go.json  maven.json  npm.json  pypi.json  rubygems.json
docs/: README.md
docs/screenshots/: README.md
engine/: ai_vendor_config.py  application_model.py  attack_catalog.py  attack_chain.py  clinical_ai_corpus.py  clinical_runner.py  data_freshness.py  defense.py  defense_catalog.py  dna.py  external_finding_prioritizer.py  graph.py  healthcare.py  hipaa.py  llm.py  mcp_gate.py  model_adapter.py  model_card.py  model_corpus.py  model_gate.py  model_gate_petri.py  model_graders.py  osi_classifier.py  patch_twin.py  personalized_risk.py  petri_scenarios.py  phi_detector.py  phi_lineage.py  policy_capabilities.py  policy_model.py  posture.py  predictive.py  risk_scoring.py  siem_generator.py  sra_report.py  supply_chain.py  threat_feeds.py  trust_scoring.py  typosquat.py  zero_day_catalog.py  (+1 more)
ingest/: ai_threats.py  ai_vendor_config.py  common.py  cwe.py  external_findings.py  ghsa.py  nvd.py  osv.py  poc.py  sbom.py  telemetry.py  threat_intel_rss.py
ingest/inventory/: __init__.py  browser_ext.py  desktop.py  enrichment.py  ide_ext.py  mcp.py
ingest/lineage/: __init__.py  azure_openai.py  bedrock_cloudtrail.py  mcp_inspector.py  openai_proxy.py  sdk_shim.py
ingest/policies/: __init__.py  aws.py  azure.py  cloud_connectors.py  folder_watch.py  gcp.py  generic.py  upsert.py
schema/: external_findings.cypher  graph_schema.cypher  mcp_gate.cypher  model_gate.cypher  petri.cypher  phi_lineage.cypher  zero_day_defense.cypher
scripts/: bootstrap.py  refresh_popular_packages.py  verify.py
tests/: conftest.py  test_api.py  test_clinical_corpus.py  test_external_findings.py  test_mcp_gate.py  test_model_gate.py  test_osi_classifier.py  test_osv_cvss.py  test_petri.py  test_phi_lineage.py  test_policy_capabilities.py  test_policy_parsers.py  test_predictive.py  test_risk_scoring.py  test_zero_day_defense.py  test_zero_day_v2.py
ui/: app.js  index.html  styles.css
